# storm-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  conanfile.py  worRemark.md
cmake/: CmakeFlags.cmake  (+7 more)
src/: CMakeLists.txt
src/apps/engine/: CMakeLists.txt
src/apps/engine/src/: main.cpp
src/libs/core/: CMakeLists.txt
src/libs/core/include/: core.h  core_private.h  file_service.h  ifs.h  v_file_service.h
src/libs/core/src/: compiler.cpp  compiler.h  core_impl.cpp  core_impl.h  file_service.cpp  ifs.cpp
src/libs/dialog/src/: link_describe.cpp
src/libs/editor/: CMakeLists.txt
src/libs/geometry/: CMakeLists.txt
src/libs/geometry/include/: geos.h
src/libs/geometry/src/: geom.h  geom_static.cpp
src/libs/lighter/src/: l_geometry.cpp
src/libs/location/src/: location.cpp
src/libs/locator/src/: locator.cpp  locator.h
src/libs/model/include/: model.h
src/libs/model/src/: node.cpp
src/libs/renderer/: CMakeLists.txt
src/libs/renderer/include/: dx9render.h
src/libs/renderer/src/: s_device.cpp  s_device.h
src/libs/renderer_dx11/: CMakeLists.txt
src/libs/renderer_opengl/: CMakeLists.txt
src/libs/rigging/src/: sail.cpp
src/libs/sound_service/src/: sound_service.cpp
src/libs/window/include/: os_window.hpp  sdl_window.hpp
src/libs/window/src/: sdl_window.cpp
src/libs/xinterface/src/: vx_service.h  xdefines.cpp  xdefines.h  xinterface.cpp  xinterface.h  xservice.cpp  xservice.h  xservice.hpp  xservice_impl.hpp
src/libs/xinterface/testsuite/: xservice.cpp
src/modules/: CMakeLists.txt
src/modules/Ai/: CMakeLists.txt
src/modules/Ai/include/: ai_flow_graph.h
src/modules/Animals/: CMakeLists.txt
src/modules/Animals/src/: animals.cpp  animals_defines.cpp  animals_defines.h  t_butterflies.cpp  t_fish_schools.cpp  t_seagulls.cpp
src/modules/Animation/: CMakeLists.txt
src/modules/Animation/src/: action_info.cpp  animation_service_imp.cpp  animation_service_imp.h
src/modules/BallSplash/: CMakeLists.txt
src/modules/BallSplash/src/: ball_splash.cpp
src/modules/BattleInterface/: CMakeLists.txt
src/modules/Blade/: CMakeLists.txt
src/modules/Blot/: CMakeLists.txt
src/modules/Blot/src/: blots.cpp
src/modules/Collide/: CMakeLists.txt
src/modules/Collide/src/: coll.cpp
src/modules/Config/: CMakeLists.txt
src/modules/Core/: CMakeLists.txt
src/modules/Core/include/: attributes.h  core.h  steam_api.hpp
src/modules/Core/src/: achievements.cpp  achievements.hpp  attributes.cpp  compiler.cpp  core_impl.cpp  core_impl.h  script_cache.h  script_libriary_test.cpp  steam_api.cpp  steam_api_impl.cpp  steam_api_script_lib.cpp
src/modules/Dialog/: CMakeLists.txt
src/modules/Dialog/src/: dialog.cpp  dialog.hpp  legacy_dialog.cpp  link_describe.cpp
src/modules/Editor/: CMakeLists.txt
src/modules/Engine/: CMakeLists.txt
src/modules/Engine/src/: main.cpp
src/modules/Filesystem/: CMakeLists.txt
src/modules/Filesystem/include/: FilesystemUtils.hpp  vma.hpp
src/modules/Filesystem/src/: Config.cpp  FilesystemUtils.cpp  file_service.cpp  ifs.cpp
src/modules/Geometry/: CMakeLists.txt
src/modules/Geometry/src/: geom_static.cpp  geometry.cpp
src/modules/Island/: CMakeLists.txt
src/modules/Island/src/: foam.cpp  foam.h  island.cpp  map_zipper.hpp
src/modules/Lighter/: CMakeLists.txt
src/modules/Lighter/src/: lighter.cpp  window.cpp  window.h
src/modules/Location/: CMakeLists.txt
src/modules/Location/src/: fader.cpp  grass.cpp  lights.cpp  lights.h
src/modules/Locator/: CMakeLists.txt
src/modules/Locator/src/: blast.cpp  locator.cpp
src/modules/Mast/: CMakeLists.txt
src/modules/Mast/src/: mast.cpp
src/modules/Model/: CMakeLists.txt
src/modules/Model/src/: model.cpp
src/modules/Particles/: CMakeLists.txt
src/modules/PcsControls/: CMakeLists.txt
src/modules/PcsControls/src/: pcs_controls.cpp
src/modules/Renderer/: CMakeLists.txt
src/modules/Renderer/include/: dx9render.h  renderer.h  rhi_video_texture.h  video_texture.h
src/modules/Renderer/src/: effects.cpp  renderer.cpp  rhi_font.cpp  rhi_font.h  s_device.cpp  s_device.h
src/modules/Rigging/: CMakeLists.txt
src/modules/Rigging/src/: flag.cpp  rope.cpp  rope.h  sail.cpp  sail.h  sailone.cpp  vant.cpp  vant.h
src/modules/Sailors/: CMakeLists.txt
src/modules/Sailors/src/: sailors.cpp  sailors_editor.cpp  sailors_editor.h
src/modules/ScriptLibrary/: CMakeLists.txt
src/modules/Sea/: CMakeLists.txt
src/modules/Sea/src/: rhi_env_map.cpp  rhi_sea.cpp  rhi_sea.h  sea.cpp
src/modules/SeaAi/: CMakeLists.txt
src/modules/SeaAi/src/: ai_sea_goods.cpp  locator_show.cpp  sea_ai.cpp
src/modules/SeaCameras/: CMakeLists.txt
src/modules/SeaCameras/src/: sea_cameras.cpp
src/modules/SeaCreatures/: CMakeLists.txt
src/modules/SeaCreatures/src/: sharks.cpp
src/modules/SeaFoam/: CMakeLists.txt
src/modules/SeaFoam/src/: seafoam.cpp  seafoam.h  seafoam_ps.cpp  seafoam_ps.h
src/modules/SeaOperator/: CMakeLists.txt
src/modules/SeaOperator/src/: sea_operator.cpp
src/modules/Shadow/: CMakeLists.txt
src/modules/Shadow/src/: shadow.cpp
src/modules/SharedHeaders/: CMakeLists.txt
src/modules/Ship/: CMakeLists.txt
src/modules/Ship/include/: ship_lights.h
src/modules/Ship/src/: ship.cpp  ship_lights.cpp  ship_lights.h
src/modules/SinkEffect/: CMakeLists.txt
src/modules/SinkEffect/src/: sink_effect.cpp  t_sink.cpp  t_sink.h  t_sink_splash.cpp  t_sink_splash.h
src/modules/Sound/: CMakeLists.txt
src/modules/Sound/src/: sound.cpp
src/modules/SoundService/: CMakeLists.txt
src/modules/SoundService/include/: sound_defines.h
src/modules/SteamApi/: CMakeLists.txt
src/modules/Teleport/: CMakeLists.txt
src/modules/Tornado/: CMakeLists.txt
src/modules/Touch/: CMakeLists.txt
src/modules/WaterRings/: CMakeLists.txt
src/modules/Weather/: CMakeLists.txt
src/modules/WorldMap/: CMakeLists.txt
src/modules/XInterface/: CMakeLists.txt
src/modules/diagnostics/: CMakeLists.txt
src/modules/input/: CMakeLists.txt
src/modules/math/: CMakeLists.txt
src/modules/utils/: CMakeLists.txt
src/modules/window/: CMakeLists.txt
(+220 files in other folders)
