cmake_minimum_required(VERSION 3.15)

# -------- #
#   Math   #
# -------- #
add_subdirectory(Math)

# --------- #
#   Utils   #
# --------- #
add_subdirectory(Utils)

# --------- #
#   Input   #
# --------- #
add_subdirectory(Input)

# ---------- #
#   Window   #
# ---------- #
add_subdirectory(Window)

# --------------- #
#   Diagnostics   #
# --------------- #
add_subdirectory(Diagnostics)

# -------------- #
#   Filesystem   #
# -------------- #
add_subdirectory(Filesystem)

# ----------------- #
#   SharedHeaders   #
# ----------------- #
add_subdirectory(SharedHeaders)

# -------- #
#   Core   #
# -------- #
add_subdirectory(Core)

# --------------- #
#   PcsControls   #
# --------------- #
#add_subdirectory(PcsControls)

# ----------------- #
#   ScriptLibrary   #
# ----------------- #
add_subdirectory(ScriptLibrary)

# ---------- #
#   Editor   #
# ---------- #
add_subdirectory(Editor)
