cmake_minimum_required(VERSION 3.15)

# -------- #
#   Math   #
# -------- #
add_subdirectory(Math)

# --------- #
#   Utils   #
# --------- #
add_subdirectory(Utils)

# --------- #
#   Input   #
# --------- #
add_subdirectory(Input)

# ---------- #
#   Window   #
# ---------- #
add_subdirectory(Window)

# --------------- #
#   Diagnostics   #
# --------------- #
add_subdirectory(Diagnostics)

# -------------- #
#   Filesystem   #
# -------------- #
add_subdirectory(Filesystem)

# ----------------- #
#   SharedHeaders   #
# ----------------- #
add_subdirectory(SharedHeaders)

# -------- #
#   Core   #
# -------- #
add_subdirectory(Core)

# --------------- #
#   PcsControls   #
# --------------- #
add_subdirectory(PcsControls)

# ----------------- #
#   ScriptLibrary   #
# ----------------- #
add_subdirectory(ScriptLibrary)

# ---------- #
#   Editor   #
# ---------- #
#add_subdirectory(Editor)

# ---------- #
#   Config   #
# ---------- #
add_subdirectory(Config)

# ----------- #
#   Collide   #
# ----------- #
add_subdirectory(Collide)

# ------------ #
#   Renderer   #
# ------------ #
add_subdirectory(Renderer)

# ------------- #
#   Animation   #
# ------------- #
add_subdirectory(Animation)

# ------------ #
#   Geometry   #
# ------------ #
add_subdirectory(Geometry)

# --------- #
#   Model   #
# --------- #
add_subdirectory(Model)

# -------- #
#   Blot   #
# -------- #
add_subdirectory(Blot)

# --------- #
#   Blade   #
# --------- #
add_subdirectory(Blade)

# ------------- #
#   Particles   #
# ------------- #
add_subdirectory(Particles)

# ---------- #
#   Shadow   #
# ---------- #
add_subdirectory(Shadow)

# ------------ #
#   Teleport   #
# ------------ #
add_subdirectory(Teleport)

# ---------------- #
#   SoundService   #
# ---------------- #
add_subdirectory(SoundService)

# --------- #
#   Sound   #
# --------- #
add_subdirectory(Sound)

# ----------- #
#   Lighter   #
# ----------- #
add_subdirectory(Lighter)

# ---------- #
#   Dialog   #
# ---------- #
add_subdirectory(Dialog)

# ------- #
#   Sea   #
# ------- #
add_subdirectory(Sea)

# ------ #
#   Ai   #
# ------ #
add_subdirectory(Ai)

# -------- #
#   Ship   #
# -------- #
add_subdirectory(Ship)

# -------- #
#   Mast   #
# -------- #
add_subdirectory(Mast)

# --------- #
#   SeaAi   #
# --------- #
add_subdirectory(SeaAi)

# ----------- #
#   Rigging   #
# ----------- #
add_subdirectory(Rigging)

# ----------- #
#   Animals   #
# ----------- #
add_subdirectory(Animals)

# -------------- #
#   BallSplash   #
# -------------- #
add_subdirectory(BallSplash)

# -------------- #
#   SeaCameras   #
# -------------- #
add_subdirectory(SeaCameras)

# ----------- #
#   Sailors   #
# ----------- #
add_subdirectory(Sailors)

# --------------- #
#   SeaOperator   #
# --------------- #
add_subdirectory(SeaOperator)

# ------------------- #
#   BattleInterface   #
# ------------------- #
add_subdirectory(BattleInterface)

# -------------- #
#   XInterface   #
# -------------- #
add_subdirectory(XInterface)

# ---------------- #
#   SeaCreatures   #
# ---------------- #
add_subdirectory(SeaCreatures)

# ------------ #
#   WorldMap   #
# ------------ #
add_subdirectory(WorldMap)

# -------------- #
#   WaterRings   #
# -------------- #
add_subdirectory(WaterRings)

# ------------ #
#   SteamApi   #
# ------------ #
add_subdirectory(SteamApi)

# ---------- #
#   Engine   #
# ---------- #
add_subdirectory(Engine)

# --------- #
#   Touch   #
# --------- #
add_subdirectory(Touch)

# ------------ #
#   Location   #
# ------------ #
add_subdirectory(Location)

# ----------- #
#   SeaFoam   #
# ----------- #
add_subdirectory(SeaFoam)

# ----------- #
#   Tornado   #
# ----------- #
add_subdirectory(Tornado)

# ---------- #
#   Island   #
# ---------- #
add_subdirectory(Island)

# ----------- #
#   Weather   #
# ----------- #
add_subdirectory(Weather)

# ----------- #
#   Locator   #
# ----------- #
add_subdirectory(Locator)

# -------------- #
#   SinkEffect   #
# -------------- #
add_subdirectory(SinkEffect)
